Person alignment fix

--- a/about/style.css
+++ b/about/style.css
@@ -89,6 +89,8 @@ p {
 
 .person {
     /* cursor: pointer; */
+    box-sizing: border-box;
+    display: block;
 }
 
 .person .icon {
